# BriqPythonSdk

./: .gitignore  .pypirc  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
BriqPythonSdk/: __init__.py  client.py
BriqPythonSdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
briq/: __init__.py  client.py  config.py  exceptions.py
briq/campaign/: __init__.py
briq/message/: __init__.py
briq/workspace/: __init__.py
docs/: api_reference.md  examples.md  usage.md
examples/: send_message.py
tests/: test_campaign.py  test_client.py  test_message.py  test_workspace.py
