[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briq"
version = "0.1.0"
description = "Python client for the Briq messaging platform API"
readme = "README.md"
authors = [
    {name = "Briq Team", email = "info@briq.tz"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.15.0",
]

[project.urls]
"Homepage" = "https://github.com/briq/briq-python"
"Bug Tracker" = "https://github.com/briq/briq-python/issues"
